# s21992_app

agones/client_and_test/: client.js  index.js  package-lock.json  package.json  test.js
agones/server/: Dockerfile  fleet.yaml  fleetautoscaler.yaml  gameserver.yaml  gameserverallocation.yaml  index.js  package-lock.json  package.json  server.js
gameLift/gamelift_client_and_test/: GameLiftClient.cs  LocationMessagePayload.cs  PlayerSessionResponse.cs  Program.cs  Test.cs  gamelift_client_and_test.csproj  gamelift_client_and_test.sln
gameLift/gamelift_client_and_test/GameLift_SDK/: GameLiftRealtimeClientSdkForFrameworkNet45.sln  GameLiftRealtimeClientSdkNet45.sln  README.md
gameLift/gamelift_client_and_test/GameLift_SDK/GameLiftRealtimeClientSdkForFrameworkNet45/: GameLiftRealtimeClientSdkForFrameworkNet45.csproj  packages.config
gameLift/gamelift_client_and_test/GameLift_SDK/GameLiftRealtimeClientSdkNet45/: GameLiftRealtimeClientSdkNet45.csproj
gameLift/gamelift_client_and_test/GameLift_SDK/Native/: CMakeLists.txt  README.md
gameLift/gamelift_client_and_test/GameLift_SDK/Native/include/: DTLSConnection.h
gameLift/gamelift_client_and_test/GameLift_SDK/Native/src/: DTLSConnection.cpp
gameLift/gamelift_client_and_test/GameLift_SDK/Source/: Client.cs  ClientConfiguration.cs  ClientEvents.cs  ClientLogger.cs  ClientSession.cs  Connection.cs  (+3 more)
gameLift/lambda/: CognitoPolicy.json  index.js  package-lock.json  package.json
gameLift/server/: createFleet.txt  deploy.txt  fleetScaling.txt  index.js  messages.js  package-lock.json  package.json  server.js
(+46 files in other folders)
